--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
   "license": "MIT",
   "dependencies": {
     "@types/express": "^4.17.17",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "express-validation": "^4.1.0"
   },
   "scripts": {
-    "start" : "ts-node ./src/index.ts"
+    "start": "ts-node ./src/index.ts"
   }
 }
