--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "author": "wosicuanqi <1677746430@qq.com>",
   "license": "MIT",
   "dependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-validation": "^4.1.0"
   },
