--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "@types/express": "^4.17.17",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "express-validation": "^4.1.0"
+    "express-jwt": "^8.4.1",
+    "express-validation": "^4.1.0",
+    "jsonwebtoken": "^9.0.0"
   },
   "scripts": {
     "start": "ts-node ./src/index.ts"
