--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "express": "^4.18.2",
     "express-jwt": "^8.4.1",
     "express-validation": "^4.1.0",
-    "jsonwebtoken": "^9.0.0"
+    "jsonwebtoken": "^9.0.0",
+    "knex": "^2.4.2",
+    "sqlite3": "^5.1.4"
   },
   "scripts": {
     "start": "ts-node ./src/index.ts"
