--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "author": "wosicuanqi <1677746430@qq.com>",
   "license": "MIT",
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-jwt": "^8.4.1",
